--- a/src/app/modules/home/components/list-page/list-page.component.html
+++ b/src/app/modules/home/components/list-page/list-page.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <h2 class="text-center mt-2">Lista de Tareas</h2>
-    <div class="mt-2">
+    <div class="table-responsive mt-2">
       <table class="table table table-dark table-striped">
         <thead>
           <tr>
