--- a/src/app/modules/home/pages/home-pages/home-pages.component.html
+++ b/src/app/modules/home/pages/home-pages/home-pages.component.html
@@ -1,4 +1,6 @@
-<app-navbar></app-navbar>
-<div>
-  <app-list-page [listPeople]="listPeople" (idEvent)="deletePeople($event)"></app-list-page>
-</div>
+<!-- <app-navbar></app-navbar> -->
+<!-- <app-list-page [listPeople]="listPeople" (idEvent)="deletePeople($event)"></app-list-page> -->
+<app-table
+  [listPeople]="listPeople"
+  (idEvent)="deletePeople($event)"
+></app-table>
