--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,6 @@
 html,body {
   background-color: #c9e4ca;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
