--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -34,7 +34,7 @@
       >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>to-do</span>
+      <span>Aplicación de crud</span>
     </mat-toolbar>
     <!-- Add Content Here -->
     <router-outlet></router-outlet>
