--- a/src/app/modules/home/components/table/table.component.html
+++ b/src/app/modules/home/components/table/table.component.html
@@ -6,25 +6,31 @@
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Nombre</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.name | titlecase}}</td>
     </ng-container>
 
     <!-- Lastname Column -->
     <ng-container matColumnDef="lastname">
       <th mat-header-cell *matHeaderCellDef>Apellido</th>
-      <td mat-cell *matCellDef="let element">{{ element.lastname }}</td>
+      <td mat-cell *matCellDef="let element">
+        {{ element.lastname | titlecase }}
+      </td>
     </ng-container>
 
     <!-- Birth Column -->
     <ng-container matColumnDef="birth">
       <th mat-header-cell *matHeaderCellDef>Fecha de nacimiento</th>
-      <td mat-cell *matCellDef="let element">{{ element.birth }}</td>
+      <td mat-cell *matCellDef="let element">
+        {{ element.birth | date: "fullDate":undefined:"es" | titlecase }}
+      </td>
     </ng-container>
 
     <!-- Message Column -->
     <ng-container matColumnDef="message">
       <th mat-header-cell *matHeaderCellDef>Mensaje</th>
-      <td mat-cell *matCellDef="let element">{{ element.message }}</td>
+      <td mat-cell *matCellDef="let element">
+        {{ element.message  }}
+      </td>
     </ng-container>
 
     <!-- options Column -->
